# GlobalLogicTest_v0

./: .gitignore  README.md
app/: CMakeLists.txt
app/src/: main.cpp
